--- a/templates/error.html
+++ b/templates/error.html
@@ -2,20 +2,23 @@
 <html lang="en">
  
 <head>
-    <title>Unauthorized Access</title>
+    <title>AAT</title>
  
  
     <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
  
     <link href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
+    <script src="../js/query.js"></script>
  
  
 </head>
  
 <body>
-  <div class="jumbotron">
-            <h1>{{error}}</h1>
-        </div>
+  
+  <form class="form-signin" method="POST">
+  
+        <button id="btnSignUp" class="btn btn-lg btn-primary btn-block" type="button" >Sign up</button>
+      </form>
 </body>
  
 </html>
