--- a/templates/index.html
+++ b/templates/index.html
@@ -6,16 +6,20 @@
  
  
     <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
- 
+  <script src="../static/js/jquery.js" ></script>
     <link href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
+    <script src="../static/js/query.js"></script>
  
  
 </head>
  
 <body>
-  <div class="jumbotron">
-            <h1>{{error}}</h1>
-        </div>
+  
+  <form class="form-signin" method="POST">
+  
+        <button id="btnSignUp" class="btn btn-lg btn-primary btn-block" type="button" >Sign up</button>
+      </form>
 </body>
+  
  
 </html>
