--- a/templates/error.html
+++ b/templates/error.html
@@ -8,6 +8,7 @@
     <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
  
     <link href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
+    <script src="../static/js/jquery.js" ></script>
     <script src="../js/query.js"></script>
  
  
@@ -15,10 +16,9 @@
  
 <body>
   
-  <form class="form-signin" method="POST">
-  
-        <button id="btnSignUp" class="btn btn-lg btn-primary btn-block" type="button" >Sign up</button>
-      </form>
+  <div class="jumbotron">
+            <h1>{{error}}</h1>
+        </div>
 </body>
  
 </html>
